--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -25,8 +25,8 @@ jobs:
     - name: Login to DockerHub
       uses: docker/login-action@v3
       with:
-        username: ${{docker-env.DOCKERHUB_USERNAME}}
-        password: ${{docker-env.DOCKERHUB_PASSWORD}}
+        username: ${{secrets.DOCKERHUB_USERNAME}}
+        password: ${{secrets.DOCKERHUB_PASSWORD}}
 
     - name: Docker build
       uses: docker/setup-build-action@v3
@@ -37,5 +37,5 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: ${{docker-env.DOCKERHUB_USERNAME}}/swe304-project3-web:latest
+        tags: ${{secrets.DOCKERHUB_USERNAME}}/swe304-project3-web:latest
     
