--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -28,9 +28,9 @@ jobs:
       
     - name: Bootjar
       env:
-        ACCESS_KEY: ${{ secrets.ACCESS_KEY }}
-        SECRET_KEY: ${{ secrets.SECRET_KEY }}
-        BUCKET: ${{ secrets.BUCKET }}
+        access: ${{ secrets.ACCESS_KEY }}
+        key: ${{ secrets.SECRET_KEY }}
+        bucket: ${{ secrets.BUCKET }}
       run: ./gradlew bootjar
 
     - name: Login to DockerHub
