--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -27,13 +27,11 @@ jobs:
       uses: gradle/actions/setup-gradle@v3
       
     - name: Bootjar
-      env:
+      with:
         access: ${{ secrets.ACCESS_KEY }}
         key: ${{ secrets.SECRET_KEY }}
         bucket: ${{ secrets.BUCKET }}
-        run: |
-          cat aws.properties
-          ./gradlew bootjar
+        run: ./gradlew bootjar
 
     - name: Login to DockerHub
       uses: docker/login-action@v3
