--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -25,11 +25,14 @@ jobs:
       
     - name: Build with Gradle
       uses: gradle/actions/setup-gradle@v3
-      with:
-        access: ${{ secrets.ACCESS_KEY }}
-        key: ${{ secrets.SECRET_KEY }}
-        bucket: ${{ secrets.BUCKET }}
-        run: ./gradlew bootjar  
+      
+    - name: Bootjar
+      run: ./gradlew bootjar  
+      env:
+        ACCESS_KEY: ${{ secrets.ACCESS_KEY }}
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
+        BUCKET: ${{ secrets.BUCKET }}
+   
 
     - name: Login to DockerHub
       uses: docker/login-action@v3
