--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -25,13 +25,17 @@ jobs:
       
     - name: Build with Gradle
       uses: gradle/actions/setup-gradle@v3
+      with:
+        properties: '[{"aws.properties": "aws.properties"}]'
+        
+    - name: Save secrets to file
+      run: |
+          echo "access=${{secrets.ACCESS_KEY}}" >> aws.properties
+          echo "key=${{secrets.SECRET_KEY}}" >> aws.properties
+          echo "bucket=${{secrets.BUCKET}}" >> aws.properties
 
     - name: Bootjar
       run: ./gradlew bootjar  
-      env:
-        ACCESS_KEY: ${{ secrets.ACCESS_KEY }}
-        SECRET_KEY: ${{ secrets.SECRET_KEY }}
-        BUCKET: ${{ secrets.BUCKET }}
 
     - name: Login to DockerHub
       uses: docker/login-action@v3
